tls-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: myapp-ingress
spec:
 tls:
   - hosts:
     - bikash.devops.com
     secretName: tls-secret
 rules:
  - host: bikash.devops.com
    http:
      paths:
      - path: /
        backend:
          serviceName: app-service
          servicePort: 8090
